--- a/public/journals/1/styleSheet.css
+++ b/public/journals/1/styleSheet.css
@@ -8,6 +8,12 @@
 .pkp_site_name .is_img img {max-height: 200px !important;}
 .pkp_site_name_wrapper {padding-left: 0; padding-right: 0;}
 .pkp_navigation_user_wrapper {top: 0; right: 30; padding-right:30px;}
+.pkp_navigation_primary_wrapper .pkp_nav_list {padding-left: 20px; 
+  text-align: left; 
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+  font-style: normal; 
+  font: bold; 
+  font-weight: bolder;}
 .pkp_structure_page {margin-top:  0px !important; margin-bottom:20 !important; padding-bottom: 20 !important;}
 
 /*menu css*/
